2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Subst TCLSH_PROG as SYSTEM_TCLSH
	and subst BUILD_TCLSH and BUILD_TCLSH_PROG.
	* configure: Regen.
	* configure.in: Invoke TEA_BUILD_TCLSH from
	tcl.m4 to correctly determine BUILD_TCLSH.

2005-04-12 Zoran Vasiljevic <zv@archiware.com>

	* generic/tclThread.h:
	* generic/threadCmd.c: reverted some changes by the
	last checkin which slipped in by mistake

2005-04-09 Zoran Vasiljevic <zv@archiware.com>

	* generic/tclThread.h: 
	* generic/threadCmd.c: added Thread_Unload and
	Thread_SafeUnload to be able to load into the
	8.5 shell. Both calls are still no-ops.

2005-03-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (AR): use @AR@
	(TCLSH_ENV): add TCL_THREAD_LIBRARY var
	* pkgIndex.tcl.in: grok TCL_THREAD_LIBRARY var

	* configure, configure.in: update to TEA 3.2

2005-03-15 Zoran Vasiljevic <zv@archiware.com>

	* pkgIndex.tcl.in: Applied patch for Bug #1163357.
	Also, fixed the case when directory path contains blanks.

2005-03-05 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvCmd.c: fixed potential access
	to the unlocked (and thus eventually freed) container

	* lib/ttrace.tcl: the overloaded [info] command now
	does the right thing when applied to non-existing 
	procedures. We now transparently resolve them and
	then allow the [info] to operate on them.

	The ttrace::enable can now be called recursively.

	Also, fixed stript generation issues for namespaced
	variables containing wild escape sequences.

2005-01-03 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: fixed Tcl Bug #1095370.
	We were wrongly tearing down workers on idle timer
	expiry *below* the number of workers set by the
	"-minworkers" option.

	* lib/ttrace.tcl: added [ttrace::config] to control
	some runtime options. The only option it allows now
	is "-doepochs". This is a boolean flag turning the
        epoch generation off/on.
	Also, improved handling of XOTcl introspections in